# monkamoo

./: .gitignore  Aurora.json  Makefile  Player1.json  Poe.json  README.md  TODO.md  aitest.py  app.json  app.py  ball.py  base.py  core.py  interpreter.py  line_parser.py  migrate_to_cloud.py  moo  moo.py  object.py  parser.py  player.py  pyproject.toml  requirements-dev.txt  requirements.txt  room.py  server.py  shell.py  socketserver.py  utils.py  world.json  world.py
docs/: LambdaCoreProgMan.html  ProgrammersManual.html
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/moo/: broker.py  interpreter.py  line_parser.py  logging_config.py  moo.py  server.py  shell.py  utils.py
src/moo/core/: aiplayer.py  ball.py  base.py  object.py  player.py  room.py  world.py
src/moo/storage/: __init__.py  cloud.py  factory.py  interface.py  local.py
static/: style.css
templates/: layout.html  login.html  session.html
